# esp32-pikvm-hid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  crc16.c  hid_task.c  hid_task.h  idf_component.yml  keymap.c  keymap.h  main.c  network_task.c  network_task.h  protocol.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  wifi_manager.c  wifi_manager.h
server/: hid_keymap.py  protocol.py  server.py  test_client.py  udp_sender.py  winapi_hooks.py
